--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
         <div class="col-lg-12">
             <div class="rev_slider">
                 <div class="slide">
-                    <img src="../Верстка (игры - слик слайдер)/img/1.jpg" class="img__slick1">
+                    <img src="/Верстка (игры - слик слайдер)/img/1.jpg" class="img__slick1">
                 </div>
                 <div class="slide">
-                    <img src="../Верстка (игры - слик слайдер)/img/2.png" class="img__slick2">
+                    <img src="/Верстка (игры - слик слайдер)/img/2.png" class="img__slick2">
                 </div>
                 <div class="slide">
-                    <img src="../Верстка (игры - слик слайдер)/img/3.jpg" class="img__slick3">
+                    <img src="/Верстка (игры - слик слайдер)/img/3.jpg" class="img__slick3">
                 </div>
                 <div class="slide">
-                    <img src="../Верстка (игры - слик слайдер)/img/4.jpg" class="img__slick4">
+                    <img src="/Верстка (игры - слик слайдер)/img/4.jpg" class="img__slick4">
                 </div>
             </div>
         </div>
