--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="col-lg-12">
             <div class="rev_slider">
                 <div class="slide">
-                    <img src="/img/1.jpg" class="img__slick1">
+                    <img src="../img/1.jpg" class="img__slick1">
                 </div>
                 <div class="slide">
                     <img src="/Верстка (игры - слик слайдер)/img/2.png" class="img__slick2">
