--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 <div class="col-lg-5">
                     <div class="zag__h4">About</div>
                     <div class="zag__h3"><span class="text_zagwe">S</span>ublime</div>
-                    <img src="../Верстка (игры - слик слайдер)/img/icon_polosagor.png" class="icon__polosagor">
+                    <img src="./img/icon_polosagor.png" class="icon__polosagor">
                  </div>  
                      
                 <div class="col-lg-6">                                  
-                        <img src="../Верстка (игры - слик слайдер)/img/icon_polosa.png" class="icon__polosa">                                 
+                        <img src="./img/icon_polosa.png" class="icon__polosa">                                 
                     <span class="text__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla pellentesque et nisi et euismod. Pellentesque quis tristique magna.</span><br><br>
                     <span class="text__lorem2">Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem, molestie tincidunt rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit non, vehicula lacus. Sed rutrum tempus urna, sed aliquam lectus egestas eu. Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem, molestie tincidunt rhoncus vel, molestie ut ligula. Mauris vitae ullamcorper odio. Mauris id enim gravida, tempor velit non, vehicula lacus. Sed rutrum tempus urna, sed aliquam lectus egestas eu</span>
                 </div>
@@ -83,21 +83,21 @@
         <div class="dj">
         <div class="row">
             <div class="col-lg-4">
-                    <img src="../Верстка (игры - слик слайдер)/img/icondj.png">
+                    <img src="./img/icondj.png">
                     <h4><b>App Development</b></h4>
                     <br>
                     <div class="text_App">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa libero ad, sit, rerum quae tenetur vero ut officia perferendis necessitatibus fugiat? Reprehenderit doloremque voluptatem porro nisi. Nostrum laboriosam voluptate voluptatem!</div><br>
                     <div class="text_App">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa libero ad, sit, rerum quae tenetur vero ut officia perferendis necessitatibus fugiat? Reprehenderit doloremque voluptatem porro nisi. Nostrum laboriosam voluptate voluptatem!</div>
             </div>
             <div class="col-lg-4">
-                    <img src="../Верстка (игры - слик слайдер)/img/icondj.png">
+                    <img src="./img/icondj.png">
                     <h4><b>App Development</b></h4>
                     <br>
                     <div class="text_App">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa libero ad, sit, rerum quae tenetur vero ut officia perferendis necessitatibus fugiat? Reprehenderit doloremque voluptatem porro nisi. Nostrum laboriosam voluptate voluptatem!</div><br>
                     <div class="text_App">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa libero ad, sit, rerum quae tenetur vero ut officia perferendis necessitatibus fugiat? Reprehenderit doloremque voluptatem porro nisi. Nostrum laboriosam voluptate voluptatem!</div>
             </div>
             <div class="col-lg-4">
-                    <img src="../Верстка (игры - слик слайдер)/img/icondj.png">
+                    <img src="./img/icondj.png">
                     <h4><b>App Development</b></h4>
                     <br>
                     <div class="text_App">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa libero ad, sit, rerum quae tenetur vero ut officia perferendis necessitatibus fugiat? Reprehenderit doloremque voluptatem porro nisi. Nostrum laboriosam voluptate voluptatem!</div><br>
@@ -109,7 +109,7 @@
 </section>
 <section id="Featured" class="Featured">
     <div class="zag__h1"><span class="text_zagwe2">F</span>eatured <span class="text_zagwe2"> P</span>rojects</div>
-    <img src="../Верстка (игры - слик слайдер)/img/icon_polosagor.png" class="icon__polosagor">
+    <img src="./img/icon_polosagor.png" class="icon__polosagor">
     <div class="col-lg-6">
         <div class="nav-featmenu">
             <nav class="featmenu">
@@ -126,16 +126,16 @@
         <div class="col-lg-12">
             <div class="rev_slider">
                 <div class="slide">
-                    <img src="../img/1.jpg" class="img__slick1">
+                    <img src="./img/1.jpg" class="img__slick1">
                 </div>
                 <div class="slide">
-                    <img src="/Верстка (игры - слик слайдер)/img/2.png" class="img__slick2">
+                    <img src="./img/2.png" class="img__slick2">
                 </div>
                 <div class="slide">
-                    <img src="/Верстка (игры - слик слайдер)/img/3.jpg" class="img__slick3">
+                    <img src="./img/3.jpg" class="img__slick3">
                 </div>
                 <div class="slide">
-                    <img src="/Верстка (игры - слик слайдер)/img/4.jpg" class="img__slick4">
+                    <img src="./img/4.jpg" class="img__slick4">
                 </div>
             </div>
         </div>
@@ -146,7 +146,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="zag__h1"><span class="text_zagwe2">S</span>trategic <span class="text_zagwe2"> P</span>rocess</div>
-                <img src="../Верстка (игры - слик слайдер)/img/icon_polosagor.png" class="icon__polosagor">
+                <img src="./img/icon_polosagor.png" class="icon__polosagor">
             </div>
         </div>
         <div class="row">
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="row justify-content-center">
                     <div class="col-lg-5">
-                        <img src="../Верстка (игры - слик слайдер)/img/strategic1.png" class="strategic__1">
+                        <img src="./img/strategic1.png" class="strategic__1">
                     </div>
                     <div class="col-lg-5">
                         <div class="our">
@@ -177,10 +177,10 @@
                             </div>
                     </div>
                     <div class="col-lg-6">
-                        <img src="../Верстка (игры - слик слайдер)/img/strategic2.png" class="strategic__2">
+                        <img src="./img/strategic2.png" class="strategic__2">
                     </div>
                     <div class="col-lg-5">
-                        <img src="../Верстка (игры - слик слайдер)/img/strategic3.png" class="strategic__3">
+                        <img src="./img/strategic3.png" class="strategic__3">
                     </div>
                     <div class="col-lg-5">
                         <div class="our">
@@ -197,7 +197,7 @@
 <section id="Provided" class="Provided">
     <div class="container">
         <div class="row">
-            <img src="../Верстка (игры - слик слайдер)/img/Provided.png">
+            <img src="./img/Provided.png">
         </div>
     </div>
 </section>
@@ -207,7 +207,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="zag__h8"><span class="text_zagwe3">O</span>ur Team</div>
-                <img src="../Верстка (игры - слик слайдер)/img/icon_polosagor.png" class="icon__polosagor2">
+                <img src="./img/icon_polosagor.png" class="icon__polosagor2">
             </div>
             <div class="col-lg-9">
                 <span class="text__lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla pellentesque et nisi et euismod. Pellentesque quis tristique magna.</span><br><br>
@@ -217,13 +217,13 @@
         <div class="row">
             <div class="foto">
                 <span class="john"><b>john Doe</b></span>
-                <img src="../Верстка (игры - слик слайдер)/img/foto1.png" class="foto1">
+                <img src="./img/foto1.png" class="foto1">
                 <span class="john"><b>john Doe</b></span>
-                <img src="../Верстка (игры - слик слайдер)/img/foto2.png" class="foto2">
+                <img src="./img/foto2.png" class="foto2">
                 <span class="john"><b>john Doe</b></span>
-                <img src="../Верстка (игры - слик слайдер)/img/foto3.png" class="foto3">
+                <img src="./img/foto3.png" class="foto3">
                 <span class="john"><b>john Doe</b></span>
-                <img src="../Верстка (игры - слик слайдер)/img/foto4.png" class="foto4">
+                <img src="./img/foto4.png" class="foto4">
                 </div>
         </div>        
     </div>
@@ -233,7 +233,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="zag__h7"><span class="text_zagwe4">T</span>estimonials</div>
-                <img src="../Верстка (игры - слик слайдер)/img/icon_polosagor.png" class="icon__polosagor3">
+                <img src="./img/icon_polosagor.png" class="icon__polosagor3">
             </div>
         </div>
         <div class="row justify-content-center">
@@ -242,7 +242,7 @@
                 <span class="text__lorem5">Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem, molestie tincidunt rhoncus vel, molestie ut ligula. Mauris vitae</span>
             </div>
             <div class="col-lg-3">
-                <img src="../Верстка (игры - слик слайдер)/img/foto5.png" class="foto5">
+                <img src="./img/foto5.png" class="foto5">
             </div>
         </div>
     </div>
